--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -28,7 +28,7 @@
 
     <div>
       <h3>Ingredients</h3>
-      <ol>
+      <ul>
         <li>2 teaspoons extra virgin olive oil</li>
         <li>1 pound ground beef chuck</li>
         <li>1/2 medium onion, diced (about 3/4 cup)</li>
@@ -47,6 +47,35 @@
         <li>1 tablespoon red or white wine vinegar</li>
         <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
         <li>Salt</li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Steps</h3>
+      <ol>
+        <li>
+          Put a large pot of salted water (1 Tbsp salt for every 2 quarts of
+          water) on the stovetop on high heat. It can take a while for a large
+          pot of water to come to a boil (this will be your pasta water), so
+          prepare the sauce in the next steps while the water is heating.
+        </li>
+
+        <li>
+          Brown the ground beef. In a large skillet heat 2 teaspoons of olive
+          oil on medium high heat. Add the ground beef and cook until it is
+          lightly browned on all sides. Remove the beef with a slotted spoon to
+          a bowl. Drain off all but a tablespoon of fat.
+        </li>
+
+        <li>
+          Cook the bell pepper, onions, garlic, add back the beef. Add the diced
+          bell pepper and onions to skillet (in the photo we are using yellow
+          bell pepper and red onions). Cook for 4 to 5 minutes, until the onions
+          are translucent and the peppers softened. Add the minced garlic and
+          cook half a minute more. Return the browned ground beef to the pan.
+          Stir to combine, reduce the heat to low and cook for another 5
+          minutes.
+        </li>
       </ol>
     </div>
   </body>
