Put image in Index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <br />
+    <img
+      src="https://media.tycsports.com/files/2021/10/14/345688/dia-del-chef.jpg"
+      alt="Chef"
+    />
+    <br />
+    <h2>Recipes</h2>
+    <ul>
+      <li><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    </ul>
   </body>
 </html>
