--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Recipes</h2>
     <ul>
       <li><a href="recipes/lasagna.html">Lasagna</a></li>
-      <li><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="recipes/gnocchi.html">Gnocchi</a></li>
     </ul>
   </body>
 </html>
